# prompt-engineering-playground

./: pyproject.toml
src/prompt_engineering_playground/: app.py
src/prompt_engineering_playground/langchain_src/: learning_notes.md  main.py
src/prompt_engineering_playground/openai_direct/: app.py
src/prompt_engineering_playground/prompts/: MUST_READ.md  fallen_angel.md
