[project]
name = "prompt-engineering-playground"
version = "0.1.0"
description = ""
authors = [
    {name = "Aymane Cheikh",email = "aymanecheikh2002@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0.0"
dependencies = [
    "openai (>=2.15.0,<3.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-openai (>=1.1.7,<2.0.0)",
    "langchain-anthropic (>=1.3.1,<2.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-google-community[gmail] (>=3.0.5,<4.0.0)"
]

[tool.poetry]
packages = [{include = "prompt_engineering_playground", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
